<resources>
    <string name="app_name">Online Shop</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="Welcome">Welcome</string>
    <string name="Home">Home</string>
    <string name="Menu">Menu</string>
    <string name="Account">Account</string>
    <string name="Bag">Bag</string>
    <string name="MyProfile">My Profile</string>
    <string name="PurchaseHistory">Purchase History</string>
    <string name="newPassword">New Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="ChangePassword">Change Password</string>
    <string name="save">Save</string>
    <string name="PasswordButton">Password</string>
    <string name="EndSesionButton">End sesion</string>
    <string name="passwordHint">Password</string>
    <string name="UsernameHint">Username</string>
    <string name="emailHint">Email</string>
    <string name="RegisterButton">Register</string>
    <string name="add">ADD</string>
    <string name="Back">Back</string>
    <string name="rsd">RSD</string>
    <string name="hrana">Hrana</string>
    <string name="povoci">Povoci</string>
    <string name="igračke">Igračke</string>
    <string name="higijena">Higijena</string>
    <string name="odeća">Odeća</string>
    <string name="empty_list">ListEmpty</string>
    <string name="TheListIsEmpty">Lista je prazna</string>
    <string name="Status">Status</string>
    <string name="Price">Price</string>
    <string name="Date">Date:</string>
    <string name="HomeActivityTag">HomeActivityTag</string>


</resources>