<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".PasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChangePassword"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:id="@+id/changePasswordTextView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:textSize="20dp"
        android:id="@+id/newPasswordEditText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/oldPassword"
        android:inputType="textPassword"
        android:textSize="20dp"
        android:id="@+id/oldPasswordEditText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="17dp"
        android:id="@+id/saveButton"/>
</LinearLayout>