<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"
        android:id="@+id/fragmentLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:id="@+id/welcomeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/WelcomeTextView"
            android:gravity="center"
            android:text="@string/Welcome"
            android:textSize="38dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/UsernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="PLACEHOLDER"
            android:textSize="20dp"/>


        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/addCategoryEditText"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Add Category"
                android:backgroundTint="@color/brown_200"
                android:id="@+id/addCategoryButton"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Item Name"
                    android:id="@+id/itemNameEditText"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Item Price"
                    android:id="@+id/itemPriceEditText"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Item Category"
                    android:id="@+id/itemCategoryEditText"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Image Name"
                    android:id="@+id/imageNameEditText"/>

            </LinearLayout>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Add Item"
                android:id="@+id/addItemButton"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Home"
            android:layout_weight="1"
            android:id="@+id/HomeButton"
            android:backgroundTint="@color/brown_200" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Menu"
            android:layout_weight="1"
            android:id="@+id/MenuButton"
            android:backgroundTint="@color/brown_200"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Account"
            android:layout_weight="1.50"
            android:id="@+id/AccountButton"
            android:backgroundTint="@color/brown_200"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Bag"
            android:layout_weight="1"
            android:id="@+id/BagButton"
            android:backgroundTint="@color/brown_200"/>
    </LinearLayout>
</LinearLayout>